modif des titres

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta charset='UTF-8'/>
-		<title>Nicolas Micallef - Index</title>
+		<title>Nicolas Micallef - Mon site</title>
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
