--- a/hobby.html
+++ b/hobby.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta charset='UTF-8'/>
-		<title>Nicolas Micallef - Hobby</title>
+		<title>Nicolas Micallef - mes Hobby</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
