--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 	<head>
 		<meta charset='UTF-8'/>
-		<title>Nicolas Micallef -  mon Contact</title>
+		<title>Nicolas Micallef -  le Contact</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
 	</head>
 	<body>
